--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,8 @@ jobs:
           
       - name: build
         run: |
-          go build -race -trimpath -ldflags "-w -s" -o ./release/frpc.exe ./cmd/frpc
-          go build -race -trimpath -ldflags "-w -s" -o ./release/frps.exe ./cmd/frps
+          go build -trimpath -ldflags "-w -s" -o ./release/frpc.exe ./cmd/frpc
+          go build -trimpath -ldflags "-w -s" -o ./release/frps.exe ./cmd/frps
 
       - name: Update artifact
         uses: actions/upload-artifact@v3
